2009-10-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Roben.

        Implement DRT functionality for Qt introduced in
        r28690 and r28705.

        - Implemented pathToLocalResource which exposes the functionality of
        converting a given unix path to the correct location on Windows.
        - Implemented a way to remove machine-dependent information from paths
        in layout test results.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::urlSuitableForTestResult):
        (WebCore::WebPage::javaScriptConsoleMessage):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::pathToLocalResource):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2009-10-28  Roland Steiner  <rolandsteiner@chromium.org>

        Adding myself to the committers list.

        * Scripts/modules/committers.py:

2009-10-28  Chris Fleizach  <cfleizach@apple.com>

        Adding myself to the committers list.

        * Scripts/modules/committers.py:

2009-10-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Jan Alonzo.

        [GTK] API to start inspector for a WebView
        https://bugs.webkit.org/show_bug.cgi?id=22551

        Use the new inspector API to implement the LayoutTestController
        interfaces used to test the inspector.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (webInspectorInspectWebView):
        (createWebView):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::showWebInspector):
        (LayoutTestController::closeWebInspector):
        (LayoutTestController::evaluateInWebInspector):

2009-10-28  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        [Qt] WebFrame::counterValueForElementById must not be exposed
        https://bugs.webkit.org/show_bug.cgi?id=30882

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp: