@@ -406,6 +406,7 @@ void dump()
     fflush(stderr);
 
     done = true;
+    gtk_main_quit();
 }
 
 static void setDefaultsToConsistentStateValuesForTesting()
@@ -484,9 +485,7 @@ static void runTest(const string& testPathOrURL)
     g_free(url);
     url = NULL;
 
-    while (!done)
-        g_main_context_iteration(NULL, TRUE);
-
+    gtk_main();
 
     // Also check if we still have opened webViews and free them.
     if (gLayoutTestController->closeRemainingWindowsWhenComplete() || webViewList) {
@@ -565,7 +564,7 @@ static void webViewLoadFinished(WebKitWebView* view, WebKitWebFrame* frame, void
 
     if (WorkQueue::shared()->count())
         g_timeout_add(0, processWork, 0);
-     else
+    else
         dump();
 }
 
